syntax = "proto3";
package houston.grpc.webhook;

option java_package = "houston.grpc.webhook";
option java_multiple_files = true;

import "google/protobuf/empty.proto";

import "vo/webhook/gitlab/PushEvent.proto";
import "vo/webhook/gitlab/NoteEvent.proto";
import "vo/webhook/github/PushEvent.proto";
import "vo/webhook/github/IssueEvent.proto";

// GitLab Webhook 서비스
service GitLab
{
  // push 이벤트
  rpc push (houston.vo.webhook.gitlab.PushEvent) returns (google.protobuf.Empty);

  // note 이벤트
  rpc note (houston.vo.webhook.gitlab.NoteEvent) returns (google.protobuf.Empty);
}

// GitHub Webhook 서비스
service GitHub
{
  // push 이벤트
  rpc push (houston.vo.webhook.github.PushEvent) returns (google.protobuf.Empty);

  // issue 이벤트
  rpc issue (houston.vo.webhook.github.IssueEvent) returns (google.protobuf.Empty);
}
